--- a/client/src/components/SubmissionHandler/SubmissionHandler.module.css
+++ b/client/src/components/SubmissionHandler/SubmissionHandler.module.css
@@ -16,6 +16,12 @@
     flex: 1;
 }
 
+.content p {
+    margin: 0;
+    padding-top: 5px;
+    padding-bottom: 15px;
+}
+
 .notClickable {
     background-color: #f0f0f0;
     opacity: 0.6;
